--- a/report/master.tex
+++ b/report/master.tex
@@ -21,6 +21,9 @@
 
 %input main content here
 \input{tex/introduction/chapter}
+\input{tex/design/chapter}
+\input{tex/implementation/chapter}
+\input{tex/test/chapter}
 
 \bookmarksetup{startatroot}% dette skulle stoppe part, så conclusion får indryk. Problemet i skrivende øjeblik er at chapters har samme indryk uafhængigt af parts
 \addtocontents{toc}{\bigskip}%laver ekstra mellemrum
