--- a/report/tex/introduction/workflow.tex
+++ b/report/tex/introduction/workflow.tex
@@ -1,8 +1,8 @@
 \section{Workflow}
-This section will describe the act of accessing the central database through API's, and explain the steps we take for this to happen.
+This section will describe the act of accessing the central database through API's from the Android applications, and explain the steps we take for this to happen. There are two ways to access the database, one for the Android applications, and one for the administration interface. This is done because the administration interface needs to be able to edit settings and manage users and profiles for the children. This means that the administration interface can connect directly to the central server and make edits to the central database.
 
-When an application is requesting a file from the local database in OasisLib and the file is not in the local database, the request will be sent to our server, which makes a request to the central database instead. The request from OasisLib will be written in JSON, and will be decoded by the server such that the central database can understand it. The response from the central database will be sent back to OasisLib, encoded in JSON. This way, the application does not have to know whether the requested data is in the local or central database, the application will get the data either way, if there is a steady connection to the server.
+When an Android application is requesting data from the local database called OasisLib, and the data is not in the local database, the request will be sent to the central server. The central server then makes a request to the central database, and sends the results back to the local database. The application will then get the results from the local database. This is done so the application does not have to know whether the requested data is in the local or central database, the application will get the data either way, if there is a steady connection to the server. Requests between the applications and the local database, as well as between the local and central database, will be written in JSON. JSON was chosen because the request has to be interpreted by different systems written in both Java and C++.
 
-Each application has in the database a table that is associated with the profile of a child, this table includes a settings blob with settings for that specific child. This settings blob is entirely controlled by the application, which means that the application itself must encode and decode the blob.
+To be able to accommodate many different Android application settings in the database, we have chosen to store all settings in binary large objects, also known as blobs. Blobs are stored as a single entity in the database, and will include all settings of an application. Because of this, every application must be able to encode and decode their own blob, as it is different for every application. Having every single application encoding and decoding their own blob may seem wasteful of resources, but it enables every application to save precisely the data it needs, without having to rework the database.
 
-The administration interface is different than the regular Android applications because it can connect directly to the central server and edit settings and profiles in the central database. This is done because it is needed to be able to manage users and profiles for the children, as well as managing their rights.
+Every Android application can have different settings for each user, in most cases likely a child, that has access to use it. This makes it possible to, for example save each child's favorite pictograms, without having to save them for other children. This feature is handled by the database, where each user has a separate entry in the applications table.
