--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -42,7 +42,7 @@
 
 % Todo notes here and there.
 % write instead for disable: \usepackage[disable]{todonotes}
-\usepackage[disable]{todonotes}
+\usepackage{todonotes}
 
 % Forbedrede floats.
 \usepackage{float}
