background and introduction

--- a/report/master.tex
+++ b/report/master.tex
@@ -12,7 +12,8 @@
 \cleardoublepage
 
 \listoftodos
-\input{tex/preface} 
+\input{tex/preface}
+\input{tex/common_chapter}
 
 \cleardoublepage
 \pdfbookmark{Table of Contents}{toc}
