--- a/report/tex/preface.tex
+++ b/report/tex/preface.tex
@@ -1,2 +1,2 @@
 \chapter*{Preface}
-
+The following report is the result of the SW6f13 project for 6th-semester students of Software Engineering at Aalborg University. The project is a subproject of the Giraf project.	
