Added section on API

--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -1,6 +1,9 @@
 % Define document class. Important.
 \documentclass[a4paper,twoside,openright]{report}
 
+\newcommand{\p}{\\ \vspace{2pt} \\}
+
+
 \usepackage{acronym}
 
 % Margener
