Moved common chapter, started adding structure

--- a/report/master.tex
+++ b/report/master.tex
@@ -13,7 +13,6 @@
 
 \listoftodos
 \input{tex/preface}
-\input{tex/common_chapter}
 
 \cleardoublepage
 \pdfbookmark{Table of Contents}{toc}
@@ -22,6 +21,8 @@
 \pagestyle{plain}
 
 %input main content here
+\input{tex/common_chapter}
+\input{tex/sprint-reflections/chapter}
 \input{tex/introduction/chapter}
 \input{tex/design/chapter}
 \input{tex/implementation/chapter}
