Added more report structure.

--- a/report/master.tex
+++ b/report/master.tex
@@ -27,6 +27,8 @@
 \input{tex/design/chapter}
 \input{tex/implementation/chapter}
 \input{tex/test/chapter}
+\input{tex/manual/chapter}
+\input{tex/reflection/chapter}
 
 \bookmarksetup{startatroot}% dette skulle stoppe part, så conclusion får indryk. Problemet i skrivende øjeblik er at chapters har samme indryk uafhængigt af parts
 \addtocontents{toc}{\bigskip}%laver ekstra mellemrum
