--- a/report/tex/design/chapter.tex
+++ b/report/tex/design/chapter.tex
@@ -1,5 +1,8 @@
 \chapter{Design}
+\input{tex/design/introduction}
 
 \input{tex/design/er_diagram}
 
 \input{tex/design/server_api}
+
+\input{tex/design/synchronization}
