--- a/report/tex/design/er_diagram.tex
+++ b/report/tex/design/er_diagram.tex
@@ -1,11 +1,11 @@
 \section{Entity-Relationship Diagram}
-The database has to store all information in our system, it has to keep that information in such a way that it is understandable for everyone who has to write an application that uses it. To get an overview of the entire database, we have made an Entity-Rrelationship (ER) diagram.
+The database has to store all information in our system, it has to keep that information in such a way that it is understandable for everyone who has to write an application that uses it. To get an overview of the entire database, we have made an Entity-Relationship (ER) diagram.
 
 The ER diagram uses a collection of basic objects called entities and their relationships to describe things in the real world and their individual relations. The group based the current diagram on last year's, re-using some attributes for entities, but cleaning up relations and adding new content needed by other groups (e.g. pictogram category). The central entities are the profile, the applications available to that profile and the pictograms linked to it.%TODO:ref earlier report here
 
 The profile holds information about the user, such as name, phone number, picture, e-mail, address and their role (e.g. parent or department employee). Roles are important in determining the privileges of the account. The pictograms available to the profile are selected by the guardians, in the case of a child.
 
-The settings of an application are saved in the link to the profile in order to allow diffrerent users to costumize the look of the application.
+The settings of an application are saved in the link to the profile in order to allow different users to customize the look of the application.
 
 The fact that applications and pictograms can be linked to department signifies, that a department can allow all users affiliated with it to have access to specific applications and pictograms related to that department.
 
