--- a/report/tex/introduction/chapter.tex
+++ b/report/tex/introduction/chapter.tex
@@ -3,6 +3,8 @@
 
 \input{tex/introduction/background}
 
+\input{tex/introduction/giraf_architechture}
+
 \input{tex/introduction/workflow}
 
 \input{tex/introduction/problem_statement}
