--- a/report/tex/test/chapter.tex
+++ b/report/tex/test/chapter.tex
@@ -1,3 +1,7 @@
-\chapter{Test \& Evaluation}
+\chapter{Test}
 
-%\input{tex/test/filename}
+\input{tex/test/introduction}
+
+\input{tex/test/unit_test}
+
+\input{tex/test/integration_test}
