--- a/report/tex/sprint_reflections/sprints.tex
+++ b/report/tex/sprint_reflections/sprints.tex
@@ -1,57 +1,25 @@
-\section*{Sprint Descriptions}
-\subsection*{Week 10}
-This week Sprint 1 started. We started distributing work between group members. We started working on the connection library and the database library. Furthermore, we started taking requests from other groups. We also had discussions about the database schema, but no real progress was made.
+\section{Sprint Descriptions}
+\subsection{Sprint 1 (Week 10 \& 11)}
+For this sprint our goal was to create a connection library, a database library, a method of authentication and a database schema.
 
+\textbf{Connection Library} - The connection library is able to receive and send requests between two different computers. We have also written unit tests for this task. The connection library is finished and should compile on Linux.
 
-\subsubsection*{Connection Library}
-We can currently send a connect request. The request will always be accepted, but the server will not crash unexpectedly if the connection cannot be created. The server will also close the connection correctly.
+\textbf{Database Library} - The basic database library functionality has been completed, and unit tests have been written for this functionality.
 
+\textbf{Authentication} - Authentication has been pushed to a later sprint as neither we or the admin group had time to look it over.
 
-\subsubsection*{Database Library}
-Work on the database library has been started.
+\textbf{Database Schema} - We have designed a database schema with attributes. It is mostly done, but might have to be extended depending on what features are needed.
 
+\subsection{Sprint 2 (Week 12 \& 13)}
+The goals for this sprint was to design a database API, set up basic synchronization between us and the admin group, and to make a problem statement.
 
-\subsection*{Week 11}
-This week marks the end of Sprint 1, which meant that we had some tasks that needed to be finished. Everything we have should compile on Linux.
+This sprint was very short due to a lot of courses and easter. Because of this, we started to design the database API and wrote a problem statement. Synchronization has been delayed to a later sprint.
 
+\subsection{Sprint 3 (Week 14, 15 \& 16)}
+Goals for this sprint include creating a JSON encoder and decoder, creating a OasisLib dummy, making the database build script and creating API-calls for all reads.
 
-\subsubsection*{Connection Library}
-The connection library is done, and included unit tests have been written.
+\textbf{JSON encoder/decoder} - Will make it possible for us to receive JSON API-calls and translate them to the C++ that we are using for the database.
 
+\textbf{OasisLib dummy} - Will make it possible for other groups to bypass the non-existent localDB, and connect directly to the live central database when making calls to the local database. The thinking is that when a local database is functional, other groups can make use of it without changing their programs.
 
-\subsubsection*{Database Library}
-Basis features are complete for the database library. Unit tests have also been written.
-
-
-\subsubsection*{Authentication}
-Auth became a very simple task, as neither we or the Admin group had time to look it over.
-
-
-\subsubsection*{Database Schema}
-We have designed a database schema with attributes. It is mostly done, but might have to be extended depending on what features are needed.
-
-
-\subsection*{Week 12}
-This week started Sprint 2, our goals for this sprint includes designing a database API, setting up basic synchronization with the admin group and to make a problem statement.
-
-Due to the limited amount of time we had to work on the project this week, the number of completed tasks is quite low. We have started designing the database API, and we have written a problem statement.
-
-
-\subsection*{Week 13}
-Not much happened, it was a short week because of easter, and we had a lot of courses.
-
-
-\subsection*{Week 14}
-Week 14 marked the start of Sprint 3. This sprint is running until April 18th, so unlike last sprint, we will have some time to work on the project. The plans for this sprint is to rework the db-schema and make it buildable, to make a JSON encoder/decoder, to make a OasisLib dummy and to make the read API-calls to the database.
-
-
-\subsubsection*{JSON encoder/decoder}
-Will make it possible for us to receive JSON API-calls and translate them to the C++ that we are using for the database.
-
-
-\subsubsection*{OasisLib dummy}
-Will make it possible for other groups to bypass the non-existent localDB, and connect directly to the live central database when making calls to the local database. The thinking is that when a local database is functional, other groups can make use of it without changing their programs.
-
-
-\subsubsection*{API-calls}
-We will begin to make the API for the database, the focus for this sprint is the read calls.
+During this sprint JSON encoder/decoder, OasisLib dummy and database build script was finished. The API-calls, however, were delayed to sprint 4.
