--- a/report/tex/sprint_reflections/chapter.tex
+++ b/report/tex/sprint_reflections/chapter.tex
@@ -1,4 +1,4 @@
-\chapter{Sprint \& Reflections}
+\chapter{Sprints \& Reflections}
 \input{tex/sprint_reflections/introduction}
 
 \input{tex/sprint_reflections/sprints}
