--- a/report/tex/sprint_reflections/sprints.tex
+++ b/report/tex/sprint_reflections/sprints.tex
@@ -1,5 +1,4 @@
-\section{Sprint Descriptions}
-\subsection{Sprint 1 (Week 10 \& 11)}
+\section{Sprint 1 (Week 10 \& 11)}
 For this sprint our goal was to create a connection library, a database library, a method of authentication and a database schema.
 
 \textbf{Connection Library} - The connection library is able to receive and send requests between two different computers. We have also written unit tests for this task. The connection library is finished and should compile on Linux.
@@ -10,16 +9,16 @@ For this sprint our goal was to create a connection library, a database library,
 
 \textbf{Database Schema} - We have designed a database schema with attributes. It is mostly done, but might have to be extended depending on what features are needed.
 
-\subsection{Sprint 2 (Week 12 \& 13)}
+\section{Sprint 2 (Week 12 \& 13)}
 The goals for this sprint was to design a database API, set up basic synchronization between us and the admin group, and to make a problem statement.
 
 This sprint was very short due to a lot of courses and easter. Because of this, we started to design the database API and wrote a problem statement. Synchronization has been delayed to a later sprint.
 
-\subsection{Sprint 3 (Week 14, 15 \& 16)}
+\section{Sprint 3 (Week 14, 15 \& 16)}
 Goals for this sprint include creating a JSON encoder and decoder, creating a OasisLib dummy, making the database build script and creating API-calls for all reads.
 
 \textbf{JSON encoder/decoder} - Will make it possible for us to receive JSON API-calls and translate them to the C++ that we are using for the database.
 
-\textbf{OasisLib dummy} - Will make it possible for other groups to bypass the non-existent localDB, and connect directly to the live central database when making calls to the local database. The thinking is that when a local database is functional, other groups can make use of it without changing their programs.
+\textbf{OasisLib dummy} - Will make it possible for other groups to bypass the non-existent local database, and connect directly to the live central database when making calls to the local database. The thinking is that when a local database is functional, other groups can make use of it without changing their programs.
 
-During this sprint JSON encoder/decoder, OasisLib dummy and database build script was finished. The API-calls, however, were delayed to sprint 4.
+During this sprint JSON encoder/decoder, OasisLib dummy and database build script were finished. The API-calls, however, were delayed to sprint 4.
