Revised the problem statement.

--- a/report/tex/introduction/problem_statement.tex
+++ b/report/tex/introduction/problem_statement.tex
@@ -1,8 +1,15 @@
 \section{Problem Statement}
-We want to create an efficient and organized database - we will serve clients with a user friendly and intuitive API for optimal database interaction.
+A central database will lay the foundation for future work on the GIRAF project. Synchronization, for example, will need a robust foundation in form of an efficient and organized database before it can be built. The goal of this project is to make this central database.
 
-Currently there is no central database. Such a database is important because the guardians of autistic children need access to the child's personal setting and pictograms regardless of what tablet is in use. Without the central database the multi-project will likely fail. At the very least it will severely inconvenience other project groups who rely on the database for completion of their projects.
+For this project, we want to:
+\begin{itemize}
+\item Create a database that can be accessed over the Internet.
+\item Create a robust API that can be used to access the database.
+\item Create an API for synchronizing the central database with a local database on an Android device.
+\end{itemize}
 
-There is a need for well documented, reusable code as there will be other project groups next year that will further develop the overall project.
+These problems will be solved with the use of MySQl for the database, JSON for the API, and a server will be set up using C++.
 
-The group will aim to use an agile approach to the project, and will employ Scrum and use other agile practices such as pair programming and continuous integration to achieve the goals of this problem statement.
+As the database will create a base for future development on the GIRAF project, there is a need for well documented and reusable code, and a well documented API.
+
+The group will for this project aim to use an agile approach. We will employ Scrum, as well as other agile practices such as pair programming and continuous integration.
