--- a/report/tex/introduction/workflow.tex
+++ b/report/tex/introduction/workflow.tex
@@ -1,5 +1,5 @@
 \section{Workflow}
-This section will describe the act of accessing the central database through API's from the Android applications, and explain the steps we take for this to happen. There are two ways to access the database, one for the Android applications, and one for the administration interface. This is done because the administration interface needs to be able to edit settings and manage users and profiles for the children. This means that the administration interface can connect directly to the central server and make edits to the central database.
+This section will describe the act of accessing the central database through API's from the Android applications, and explain the steps we take for this to happen. There are two ways to access the database, one for the Android applications, and one for the administration interface. This is done because the administration interface needs to be able to edit settings and manage users and profiles for the children. This means that the administration interface can connect directly to the central server and edit the central database.
 
 When an Android application is requesting data from the local database called OasisLib, and the data is not in the local database, the request will be sent to the central server. The central server then makes a request to the central database, and sends the results back to the local database. The application will then get the results from the local database. This is done so the application does not have to know whether the requested data is in the local or central database, the application will get the data either way, if there is a steady connection to the server. Requests between the applications and the local database, as well as between the local and central database, will be written in JSON. JSON was chosen because the request has to be interpreted by different systems written in both Java and C++.
 
