--- a/report/tex/introduction/problem_statement.tex
+++ b/report/tex/introduction/problem_statement.tex
@@ -8,7 +8,7 @@ For this project, we want to:
 \item Create an application for synchronizing the central database with a local database on an Android device.
 \end{itemize}
 
-These problems will be solved with the use of MySQl for the database, JSON for the API, and a server will be set up using C++.
+These problems will be solved with the use of MySQL for the database, JSON for the API, and a server will be set up using C++.
 
 As the database will create a base for future development on the GIRAF project, there is a need for well documented and reusable code, and a well documented API.
 
