--- a/report/tex/sprint_reflections/sprints.tex
+++ b/report/tex/sprint_reflections/sprints.tex
@@ -22,3 +22,5 @@ Goals for this sprint include creating a JSON encoder and decoder, creating a Oa
 \textbf{OasisLib dummy} - Will make it possible for other groups to bypass the non-existent local database, and connect directly to the live central database when making calls to the local database. The thinking is that when a local database is functional, other groups can make use of it without changing their programs.
 
 During this sprint JSON encoder/decoder, OasisLib dummy and database build script were finished. The API-calls, however, were delayed to sprint 4.
+
+\section{Sprint 4 (Week 17 \& 18)}
