--- a/report/master.tex
+++ b/report/master.tex
@@ -24,6 +24,7 @@
 \input{tex/common_chapter}
 \input{tex/sprint_reflections/chapter}
 \input{tex/introduction/chapter}
+\input{tex/analysis/chapter}
 \input{tex/design/chapter}
 \input{tex/implementation/chapter}
 \input{tex/test/chapter}
