intro + data needed + 2012 material
+ minor corrections elsewhere

--- a/report/tex/analysis/chapter.tex
+++ b/report/tex/analysis/chapter.tex
@@ -1,6 +1,10 @@
 \chapter{Analysis}
 \input{tex/analysis/introduction}
 
+\input{tex/analysis/last_year}
+
+\input{tex/analysis/data}
+
 %\input{tex/analysis/background}
 
 %\input{tex/analysis/giraf_architechture}
