--- a/report/tex/analysis/requirements.tex
+++ b/report/tex/analysis/requirements.tex
@@ -1,11 +1,11 @@
 \section{Requirements Analysis}
-In this section the requirements for the project will be investigated. It is a proven fact that miscommunication between developers and customers or users can lead to misunderstood, unnecessary or unwanted functionality.\cite{req_wrong} %Larman (2004)
-As a result, development time is wasted on functionality that will not used. The goal with the requirements analysis is to end up with a list of concrete requirements that will satisfy the customer's demand and will fulfill the problem statement without wasting time on unnecessary tasks. 
+It is a proven fact that miscommunication between developers and customers or users can lead to misunderstood, unnecessary or unwanted functionality.\cite{req_wrong} %Larman (2004)
+As a result, development time is wasted on functionality that will not be used. The goal with the requirements analysis is to end up with a list of concrete requirements that will satisfy the customer's demands and will fulfill the problem statement without wasting time on unnecessary tasks. 
 
-The Wasteland project is a bit peculiar, because it handles the data behind the functionality in GIRAF. We will collect requirements from some of the contacts mentioned in the common report and from Ulrik Nyman, the semester coordinator. The reason for Ulrik Nyman's inclusion is that this is a student project and someone else will take over later on. And Ulrik Nyman will undoubtedly be involved in future development of GIRAF and he might therefore have some specific requirements in this context.
+We will collect requirements from some of the contacts mentioned in the common report and from Ulrik Nyman, the semester coordinator. The Wasteland project is a bit peculiar in this context, because it handles the data behind the functionality in GIRAF and not so much of the functionality itself. The reason for Ulrik Nyman's inclusion is, that this is a student project and someone else will take over later on. And Ulrik Nyman will undoubtedly be involved in future development of GIRAF and he might therefore have some specific requirements in this context.
 
 \subsection{Contact requirements}
-The contacts had a lecture about how they use the various tools and techniques available to them and which pros and cons they each had. They have been involved in previous versions of GIRAF and have tested some of the existing functionality such a the timer. They mentioned things such as timers that visualize the time spent and time remaining. They have also tested tablets with previous versions of GIRAF installed and had were interested in being able to take pictures with the tablets and assigning the pictures to one or several children in the institution. They also requested that children were not dependent on a specific tablet and that one tablet could accommodate several children with their own specific preferences. They also mentioned that they sometimes take the children on excursions where there rarely is any Internet connection. They figured that it would be nice if the tablets could be used in such a setting and the changes that were made would then only be saved locally until they got a Wi-Fi connection again such as pictures added to one or more children.
+The contacts held a lecture about how they use the various tools and techniques available to them and which pros and cons they each had. They have been involved in previous versions of GIRAF and have tested some of the existing functionality such a the timer. They mentioned things such as timers that visualize the time spent and time remaining. They have also tested tablets with previous versions of GIRAF installed and had were interested in being able to take pictures with the tablets and assigning the pictures to one or several children in the institution. They also requested that children were not dependent on a specific tablet and that one tablet could accommodate several children with their own specific preferences. They also mentioned that they sometimes take the children on excursions where there rarely is any Internet connection. They figured that it would be nice if the tablets could be used in such a setting and the changes that were made would then only be saved locally until they got a Wi-Fi connection e.g. pictures taken on the excursion.
 
 Ulrik Nyman had a few but more specific requirements. Such as install instructions that were simple and easy to understand and follow. He also specified that he preferred a small amount of well written and appropriately commented code over a large amount of uncommented and less structured code. Lastly he asked for some good documentation of the work done by each project group along with a list of functionality that would be well suited in the future. 
 
@@ -32,5 +32,5 @@ The requirements mentioned in the previous section. Have been evaluated and we h
 	\caption{List of requirements for the Wasteland project}
 \end{figure}
 
-The requirements in \autoref{req:list} are fairly straight forward, however the last three requirements are a bit different from the rest. The ability to use the local database without Wi-Fi is not essential, but would be nice if there is time as specified by one of the contacts \todo{find lige ud af hvilken - tror det var Mette Ahls}. The two last requirements are Ulrik Nyman's requirements as there have previously been problems with poorly documented code and install instructions. This is a very important requirement as the GIRAF will be further developed, either by students or professionals and either way they need to be able to use the code and documentation that has already been written.
+The requirements in \autoref{req:list} are fairly straight forward, however the last three requirements are a bit different from the rest. The ability to use the local database without Wi-Fi is not essential, but would be nice if there is time as specified by one of the contacts \todo{find lige ud af hvilken - tror det var Mette Ahls}. The two last requirements are Ulrik Nyman's requirements as there have previously been problems with poorly documented code and install instructions. This is a very important requirement as the GIRAF system will be further developed, either by students or professionals and either way they need to be able to use the code and documentation that has already been written.
 % subsection list_of_requirements (end) 
