Updated section on API design, added documentation to appendix

--- a/report/master.tex
+++ b/report/master.tex
@@ -35,6 +35,15 @@
 \addtocontents{toc}{\bigskip}%laver ekstra mellemrum
 
 \cleardoublepage
+\begin{appendices}
+\chapter{API Documentation}\label{app:api}
+\includepdf[pages={1}]{img/appendix_api}
+\includepdf[pages={2}]{img/appendix_api}
+\includepdf[pages={3}]{img/appendix_api}
+\includepdf[pages={4}]{img/appendix_api}
+\includepdf[pages={5}]{img/appendix_api}
+\end{appendices}
+\cleardoublepage
 \pdfbookmark{Bibliography}{bib}
 \bibliographystyle{plain}
 \bibliography{bib/bibliography}
