--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -3,9 +3,8 @@
 
 \newcommand{\p}{\\ \vspace{2pt} \\}
 
-
+\usepackage{pdfpages}
 \usepackage{acronym}
-
 % Margener
 %\setlength{\evensidemargin}{1cm}
 %\setlength{\oddsidemargin}{1cm}
