--- a/report/tex/design/server_api.tex
+++ b/report/tex/design/server_api.tex
@@ -9,7 +9,8 @@ which is to support the simplicity and flexibility of the \ac{api}.
 
 Considering that the \ac{api} should allow for all the necessary operations on a persistent storage system, it was decided that is should
 implement the \ac{crud} actions, as these provide the minimal number of operations that allow for complete data manipulation. \citep{crud13}
-As such, the \ac{crud} actions comply with both demands of simplicity and flexibility.\p
+As such, the \ac{crud} actions comply with both demands of simplicity and flexibility. It was decided however, that the action for linking pictograms
+and applications to profiles and departments would be cleaner if it was placed in a separate action, in this case called ``link''.\p
 Another decision was made to keep the \ac{api} design free of authorization elements. It is, for example, completely valid, for a normal user
 to request deletion of every profile in the database, and then it is up to the server to determine that they do not have the right to do this.
 This, again, keeps things simple, as it means that the same actions are available, whether the request comes from an administrative or
@@ -23,8 +24,7 @@ should be checked each time in any case.
 When communicating on a network, it is important that the data can be serialized, that is, represented as a series of symbols. Two of the most
 well-known standards for serializing data between different platforms were considered, namely \ac{json} and \ac{xml}. The main difference, from
 an overall system point of view, between these, is that \ac{json} is more light-weight, and arguably easier for humans to read, but has less 
-ways of expressing data than \ac{xml}.
-
+ways of expressing data than \ac{xml}.\p
 This choice was discussed with multiple groups and in the end, \ac{json} was selected. The readability of the format was valued highly, and it
 was argued that \ac{json} would have enough power of expression for what this \ac{api} would need. The fact that it is less verbose, and as such
 transferred faster over networks is also welcome.
@@ -34,23 +34,24 @@ transferred faster over networks is also welcome.
 For simplicity, the decision was made that requests of every type should have the same structure. That is, the request should be in the form of
 a \ac{json} object with three keys: \texttt{auth}, \texttt{action} and \texttt{data}. The \texttt{auth} key should contain another object, which
 contains the authentication information of the following request, whether logging in with a username and password, or using a QR certificate. The
-\texttt{action} key refers to a string, naming one of the \ac{crud} actions. Finally, the \texttt{data} key, refers to an object which contents
+\texttt{action} key refers to a string, naming one of the \ac{crud} (or link) actions. Finally, the \texttt{data} key, refers to an object which contents
 will differ depending on the action named. An example of requesting each profile that a user can access, can be seen in \autoref{lst:request.sample}.
 
 \lstinputlisting[label=lst:request.sample,caption=Sample Request]{lst/request.sample.json}
 
 \subsection{Response Structure}
 
-As with the requests, responses should have a single structure. Incidentally, the response is also a \ac{json} object containing three keys, in this
-case \texttt{status}, \texttt{errors} and \texttt{data}. The \texttt{status} key should contain a single string, describing what happened during the
+As with the requests, responses should have a single structure. The response is a \ac{json} object containing four keys, in this
+case \texttt{status}, \texttt{errors}, \texttt{session} and \texttt{data}. The \texttt{status} key should contain a single string, describing what happened during the
 processing of the request, this could for example be ``OK'', ``SYNTAXERROR'', or ``AUTHFAILED''. The \texttt{errors} key refers to an array of error
-messages, typically an empty array if everything went fine. The \texttt{data} key can either refer to null, if an update or delete request was issued,
-or if there was errors in the request, a list of new ids if it was a create request, and finally the requested data for a read request. An example of
-a possible response to the request seen in \autoref{lst:request.sample} can be seen in \autoref{lst:response.sample}
+messages, typically an empty array if everything went fine. The \texttt{session} key is only present if authentication was successful, and contains information
+about the authenticated user, like the ids of the user and profile if applicable, as well as a session key for easy subsequent authentication.  The \texttt{data} key
+can either refer to null, if an update or delete request was issued, or if there was errors in the request, a list of new ids if it was a create request, and finally
+the requested data for a read request. An example of a possible response to the request seen in \autoref{lst:request.sample} can be seen in \autoref{lst:response.sample}
 
 \lstinputlisting[label=lst:response.sample,caption=Sample Response]{lst/response.sample.json}
 
 \subsection{Overview}
 
 The final \ac{api} is simple, but powerful enough that it can do what it needs to do, partly due to the adherence to the \ac{crud} principles. The full
-documentation for the \ac{api} can be seen in %TODO appendix.
+documentation for the \ac{api} can be seen in Appendix \autoref{app:api}.
