--- a/report/tex/implementation/chapter.tex
+++ b/report/tex/implementation/chapter.tex
@@ -2,5 +2,6 @@
 \input{tex/implementation/introduction}
 
 %\input{tex/implementation/filename}
-
+\input{tex/implementation/architecture_overview}
 \input{tex/implementation/API}
+\input{tex/implementation/builder_functions}
