analysis and design

--- a/report/tex/design/chapter.tex
+++ b/report/tex/design/chapter.tex
@@ -1,6 +1,8 @@
 \chapter{Design}
 \input{tex/design/introduction}
 
+%\input{tex/design/database_design}
+
 \input{tex/design/er_diagram}
 
 \input{tex/design/server_api}
