--- a/report/tex/analysis/introduction.tex
+++ b/report/tex/analysis/introduction.tex
@@ -1,1 +1,1 @@
-In this chapter the material from the 2012 version of GIRAF will be analyzed and evaluated for future use. Thereafter an assessment will be made of the data needed in order to capture everything that the institutions will need for the GIRAF system to suit their needs. And lastly a requirements analysis will be performed with a resulting list of requirements. 
+In this chapter the material from the 2012 database version of GIRAF is analyzed and evaluated for future use. An assessment is made of the data needed in order to capture everything that the institutions need for the GIRAF system to suit their needs. Lastly a requirements analysis is performed with a resulting list of requirements. 
