--- a/report/tex/analysis/requirements.tex
+++ b/report/tex/analysis/requirements.tex
@@ -2,10 +2,10 @@
 It is a proven fact that miscommunication between developers and customers or users can lead to misunderstood, unnecessary or unwanted functionality.\cite{req_wrong} %Larman (2004)
 As a result, development time is wasted on functionality that will not be used. The goal with the requirements analysis is to end up with a list of concrete requirements that will satisfy the customer's demands and will fulfill the problem statement without wasting time on unnecessary tasks. 
 
-We will collect requirements from some of the contacts mentioned in the common report and from Ulrik Nyman, the semester coordinator. The Wasteland project is a bit peculiar in this context, because it handles the data behind the functionality in GIRAF and not so much of the functionality itself. The reason for Ulrik Nyman's inclusion is, that this is a student project and someone else will take over later on. And Ulrik Nyman will undoubtedly be involved in future development of GIRAF and he might therefore have some specific requirements in this context.
+The requirements have been collected from some of the contacts mentioned in the common report and from Ulrik Nyman, the semester coordinator. The Wasteland project is a bit peculiar in this context, because it handles the data behind the functionality in GIRAF and not so much of the functionality itself. The reason for Ulrik Nyman's inclusion is, that this is a student project and someone else will take over later on. And Ulrik Nyman will undoubtedly be involved in future development of GIRAF and he has some specific requirements in this context.
 
 \subsection{Contact requirements}
-The contacts held a lecture about how they use the various tools and techniques available to them and which pros and cons they each had. They have been involved in previous versions of GIRAF and have tested some of the existing functionality such a the timer. They mentioned things such as timers that visualize the time spent and time remaining. They have also tested tablets with previous versions of GIRAF installed and had were interested in being able to take pictures with the tablets and assigning the pictures to one or several children in the institution. They also requested that children were not dependent on a specific tablet and that one tablet could accommodate several children with their own specific preferences. They also mentioned that they sometimes take the children on excursions where there rarely is any Internet connection. They figured that it would be nice if the tablets could be used in such a setting and the changes that were made would then only be saved locally until they got a Wi-Fi connection e.g. pictures taken on the excursion.
+The contacts held a lecture about how they use the various tools and techniques available to them and which pros and cons they each had. They have been involved in previous versions of GIRAF and have tested some of the existing functionality such as the timer. They mentioned some of their most usefull tools were things such as timers that visualize the time spent and time remaining. They have also tested tablets with previous versions of GIRAF installed and were interested in being able to take pictures with the tablets and assigning the pictures to one or several children in the institution. They also requested that children were not dependent on a specific tablet and that one tablet could accommodate several children with their own specific preferences. They also mentioned that they sometimes take the children on excursions where there rarely is any Internet connection. They figured that it would be nice if the tablets could be used in such a setting and the changes that were made would then only be saved locally until they got a Wi-Fi connection e.g. pictures taken on the excursion.
 
 Ulrik Nyman had a few but more specific requirements. Such as install instructions that were simple and easy to understand and follow. He also specified that he preferred a small amount of well written and appropriately commented code over a large amount of uncommented and less structured code. Lastly he asked for some good documentation of the work done by each project group along with a list of functionality that would be well suited in the future. 
 
@@ -13,24 +13,36 @@ Ulrik Nyman had a few but more specific requirements. Such as install instructio
 
 %The tablets have to be able to add new data to the local database and upload the changes to the centralized database. Thus enabling the guardians to use different tablets for the same child and vice versa. This functionality calls for some kind of synchronization between the databases.
 
+\subsection{Specific Applications} % (fold)
+\label{sub:specific_applications}
+The various applications in the GIRAF system are divided into tools and games, respectively. Common for all applications is that they need to be able to distinguish between the different profiles. The games are less advanced with regard to functionality than some of the tools and therefore do not vary much in the data they need to access in the database. The games need to be able to save settings and high scores for the individual child. The requirements for the tools vary from tool to tool. Some tools need to be able to access the child's pictogram others need to be able to add a pictogram to the child's personal pictogram library in that case the application needs rights to add data to the database.  
+% subsection specific_applications (end)
+
+\subsection{Admin Group} % (fold)
+\label{sub:admin_group}
+The admin group is responsible for all desktop administration of the GIRAF system. Their goal is to allow administrators desktop access to the various children's profile and allow them to create, edit and delete profiles. They also allow for administrators to make changes that affect entire departments, thus making it a lot easier to add some specific pictograms to all children of a given department.   
+% subsection admin_group (end)
+
+\subsection{Security} % (fold)
+\label{sub:security}
+As of the summer 2013 the GIRAF project is still in a development phase. The current log in system comprises of a QR-code that the guardians scan with the tablet's camera in order to log into the system. The QR-code contains the username and password for each individual guardian and the QR-codes can easily be copied and could present a security breach. When the system eventually gets released to the public. There needs to be a high degree of security implemented into the system. The system will eventually contain personal and sensitive information and there are laws that regulate how this information should be managed.  
+% subsection security (end)
 
 \subsection{List of Requirements} % (fold)
 \label{sub:list_of_requirements}
-The requirements mentioned in the previous section. Have been evaluated and we have come up with what we believe will meet those requirements. The itemized list in \autoref{req:list} is the final list of requirements:
+The requirements mentioned in the previous section have been evaluated and we have come up with what we believe will meet those requirements. The requirements are listed below:
 
-\begin{figure}[htpb]
-	\label{req:list}
-	\begin{itemize}
-		\item A central database
-		\item A local database on each tablet		
-		\item Synchronization between the central and the local databases
-		\item Android application that can mimic the synchronization
-		\item Ability to use local database without Wi-Fi
-		\item An install manual
-		\item Good documentation
-	\end{itemize}
-	\caption{List of requirements for the Wasteland project}
-\end{figure}
+\begin{itemize}
+	\item A central database
+	\item A local database on each tablet		
+	\item Synchronization between the central and the local databases
+	\item 2 way synchronization
+	\item Android application that can mimic the synchronization
+	\item An API that provides applications with database access
+	\item Ability to use local database without Wi-Fi
+	\item An install manual
+	\item Good documentation
+\end{itemize}
 
-The requirements in \autoref{req:list} are fairly straight forward, however the last three requirements are a bit different from the rest. The ability to use the local database without Wi-Fi is not essential, but would be nice if there is time as specified by one of the contacts \todo{find lige ud af hvilken - tror det var Mette Ahls}. The two last requirements are Ulrik Nyman's requirements as there have previously been problems with poorly documented code and install instructions. This is a very important requirement as the GIRAF system will be further developed, either by students or professionals and either way they need to be able to use the code and documentation that has already been written.
+The requirements are fairly straight forward, however the last three requirements are a bit different from the rest. The ability to use the local database without Wi-Fi is not essential, but would be nice if there is time as specified by one of the contacts. The two last requirements are Ulrik Nyman's requirements as there have previously been problems with poorly documented code and install instructions. This is a very important requirement as the GIRAF system will be further developed, either by students or professionals and either way they need to be able to use the code and documentation that has already been written.
 % subsection list_of_requirements (end) 
